[gd_scene load_steps=7 format=3 uid="uid://rtiej3wky01"]

[ext_resource type="Texture2D" uid="uid://bbe0jrbdaiqin" path="res://Sprites/Puck.png" id="1"]
[ext_resource type="Script" path="res://Objects/Puck.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://bkphp4eep62j2" path="res://Sounds/277046__nabz871__electro-flanged-snare (1).wav" id="3"]
[ext_resource type="Texture2D" uid="uid://c3ji1notyysy8" path="res://Sprites/Puck light.png" id="4"]

[sub_resource type="PhysicsMaterial" id="1"]
bounce = 3.0

[sub_resource type="CircleShape2D" id="2"]
radius = 28.0

[node name="Puck" type="RigidBody2D"]
physics_material_override = SubResource("1")
gravity_scale = 0.0
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 5
texture = ExtResource("1")

[node name="Glow" type="Sprite2D" parent="Sprite2D"]
modulate = Color(1, 1, 1, 0.054902)
z_index = 1
z_as_relative = false
texture = ExtResource("4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("2")

[node name="Audio_1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
autoplay = true

[node name="Audio_2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
autoplay = true

[connection signal="body_entered" from="." to="." method="_on_Puck_body_entered"]
